fixed dropdown options on small screen

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -47,29 +47,27 @@
 .sm-container {
     padding: 15px;
     display: flex;
+    position: relative;
     flex-direction: column;
     text-align: center;
     gap: 10px;
 }
 
 .header {
-    position: relative;
     display: flex;
-    align-items: baseline;
+    justify-content: center;
     margin-bottom: 20px;
-}
-
-#sm-delete-button {
-    position: absolute;
-    right: 1%;
-    top: -35%;
 }
 
 #panel-name {
     font-size: 20px;
     font-weight: bold;
-    margin: 0 20px;
-    flex-grow: 2;
+}
+
+.dd-sm {
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 /* Style for modal */
